# InkyPictureFrame

./: .gitignore  install.sh  pyproject.toml
frame/: __main__.py  client.py  immich-api.py
inky-frame/client/: __main__.py  client.py  config.py
inky-frame/webui/: app.py  server.py
inky-frame/webui/static/: app.js  styles.css
inky-frame/webui/templates/: index.html
